--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,32 @@
   --black: #242d49;
   --gray: #788097;
   --purple: linear-gradient(180deg, #BB67FF 0%, #C484F3 100%);
-  --pink: #FF919D;
+  --pink: #F1A921;
   --glass: rgba(255, 255, 255, 0.54);
   --boxShadow: 0px 19px 60px rgb(0 0 0 / 8%);
   --smboxShadow: -79px 51px 60px rgba(0, 0, 0, 0.08);
-  --activeItem: #f799a354;
+  --activeItem: #169cdf7c;
+}
+.App{
+  background: linear-gradient(
+    106.37deg,
+    #8ACCED 29.63%,
+    #169CDF 51.55%,
+    #0e6b9a 90.85%
+  );
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+}
+
+.AppGlass{
+  display: grid;
+  height: 97%;
+  width: 97%;
+  border-radius: 2rem;
+  background-color: var(--glass);
+  overflow: hidden;
+  grid-template-columns:11rem auto 20rem;
 }
