--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -71,3 +71,46 @@
     width:100%;
 
 }
+.bars{
+    display: none;
+}
+
+
+@media screen and (max-width:1200px){
+    .menuItem>span{
+        display: none;
+    }
+    .logo{
+        display:none;
+    }
+}
+@media screen and (max-width:768px) {
+    .Sidebar{
+        position: fixed;
+        z-index: 9;
+        background: whitesmoke;
+        width: 55%;
+        padding-right: 1rem;
+        height: 100rem;
+    }
+    .menuItem>span{
+        display: block;
+        
+    }
+    .logo{
+        display: flex;
+    }
+    .menu .menuItem:last-child{
+        position: relative;
+        margin-top: 3rem;
+    }
+    .bars{
+        display: flex;
+        position: fixed;
+        top: 2rem;
+        z-index: 9;
+        background: #EEA61D;
+        padding: 10px;
+        border-radius: 25px;
+    }
+}
