--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -7,3 +7,16 @@
     width: 100%;
 
 }
+@media screen and (max-width:1200px){
+    .Cards{
+        flex-direction: column;
+    }
+    .parentContainer{
+        height: 9rem;
+    
+    }
+}
+
+@media screen and (max-width:768px) {
+    .Cards{width: 90%;}
+}
