--- a/src/components/MainDash/MainDash.css
+++ b/src/components/MainDash/MainDash.css
@@ -3,3 +3,16 @@
     flex-direction: column;
     justify-self: space-evenly;
 }
+
+@media screen and (max-width:1200px){
+    .MainDash{
+        justify-self: flex-start ;
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .MainDash{
+        align-items: center;
+    }
+}
