--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -22,3 +22,21 @@
 .Details{
     color: blue !important;
 }
+
+@media screen and (max-width:1200px){
+    .Table{
+        width: 70%;
+        margin-top: 2rem;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .Table{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 24rem;
+        align-items: center;
+    }
+}
